@@ -77,6 +77,7 @@ int F_ArrayToString(int argc, NXSL_Value **argv, NXSL_Value **result, NXSL_VM *v
 int F_GeoLocation(int argc, NXSL_Value **argv, NXSL_Value **result, NXSL_VM *vm);
 int F_ReadPersistentStorage(int argc, NXSL_Value **argv, NXSL_Value **result, NXSL_VM *vm);
 int F_SecondsToUptime(int argc, NXSL_Value **argv, NXSL_Value **ppResult, NXSL_VM *vm);
+int F_SplitString(int argc, NXSL_Value **argv, NXSL_Value **result, NXSL_VM *vm);
 int F_WritePersistentStorage(int argc, NXSL_Value **argv, NXSL_Value **result, NXSL_VM *vm);
 
 int S_max(const TCHAR *name, NXSL_Value *options, int argc, NXSL_Value **argv, int *selection, NXSL_VM *vm);
@@ -136,6 +137,7 @@ static NXSL_ExtFunction m_builtinFunctions[] =
    { _T("GeoLocation"), F_GeoLocation, -1 },
    { _T("ReadPersistentStorage"), F_ReadPersistentStorage, 1 },
 	{ _T("SecondsToUptime"), F_SecondsToUptime, 1 },
+   { _T("SplitString"), F_SplitString, 2 },
 	{ _T("TCPConnector"), F_tcpConnector, 2 },
 	{ _T("UDPConnector"), F_udpConnector, 2 },
    { _T("WritePersistentStorage"), F_WritePersistentStorage, 2 }
